# Empacotamento2D

./: README.md
BinPacking2D/: CMakeLists.txt  main.cpp
